# eudist

./: .build-wheels.sh  .gitignore  .gitlab-ci.yml  Makefile  README.md  eudist.pyx  eudist.pyx.in  eudist_cpp.cxx  eudist_cpp.hxx  eudist_cpp.pxd  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: build.yml  build.yml.sh  setup_qemu.sh
docs/: conf.py  index.rst
eudist/: __init__.py  __init__.pyx  point_plane.py  test_point_plane.py  test_polymesh.py  test_seqment.py
