[metadata]
name = eudist
url = https://github.com/dschwoerer/eudist
project_urls =
    Bug Tracker = https://github.com/dschwoerer/eudist/issues

author = David Schwörer
author_email = dave@ipp.mpg.de
description = Calculate distances between simple shapes such as polygons.
license = GPL
python_requires = >=3.6
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Intended Audience :: Education
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Visualization

[options]
setup_requires =
    setuptools>=42
    setuptools_scm[toml]>=3.4
    setuptools_scm_git_archive
    cython
    numpy
install_requires =
    cython
    numpy
tests_require =
    pytest >= 3.3.0
include_package_data = True
packages = find:

[options.extras_require]
docs = sphinx >= 1.4

[build_sphinx]
project = $metadata.name
version = $metadata.version
release = $metadata.version
source-dir = docs
